refactor: 카페인캐시로 변경